[project]
name = "lm_builder"
version = "0.0.1"
description = "Python framework for building language models"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Lazaro Hurtado" }
]
license = { text = "MIT" }
dependencies = [
    "accelerate",
    "einops",
    "python-dotenv",
    "torch",
    "tiktoken",
    "transformers",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black",
    "pylint",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lm_builder"]
